# libfhe

./: .gitignore  CMakeLists.txt  Dockerfile  Doxyfile  INSTALL  README  SECURITY
.github/workflows/: cmake-single-platform.yml
docs/html/: _formulas.tex  annotated.html  classes.html  dir_d44c64559bbebec7f509842c48db8b23.html  fhe_8h.html  fhe_8h_source.html  fhe__bgv_8h.html  fhe__bgv_8h_source.html  fhe__config_8h.html  fhe__config_8h_source.html  fhe__poly_8h.html  fhe__poly_8h_source.html  fhe__ring_8h.html  fhe__ring_8h_source.html  files.html  functions.html  functions_vars.html  globals.html  globals_enum.html  globals_func.html  globals_type.html  index.html  menudata.js  structbgv__ct__t.html  structbgv__key__t.html  structbgv__keypair__t.html  structbgv__t.html  structpoly__t.html  structring__t.html
docs/html/search/: all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_a.js  all_b.js  classes_0.js  classes_1.js  classes_2.js  enums_0.js  functions_0.js  functions_1.js  functions_2.js  pages_0.js  searchdata.js  typedefs_0.js  typedefs_1.js  typedefs_2.js  typedefs_3.js  typedefs_4.js  typedefs_5.js  variables_0.js  variables_1.js  variables_3.js  variables_5.js  variables_6.js  variables_8.js  variables_9.js  variables_a.js  variables_b.js  variables_c.js
docs/latex/: annotated.tex  fhe_8h.tex  fhe_8h_source.tex  fhe__bgv_8h.tex  fhe__bgv_8h_source.tex  fhe__config_8h.tex  fhe__config_8h_source.tex  fhe__poly_8h.tex  fhe__poly_8h_source.tex  fhe__ring_8h.tex  fhe__ring_8h_source.tex  files.tex  index.tex  refman.tex  structbgv__ct__t.tex  structbgv__key__t.tex  structbgv__keypair__t.tex  structbgv__t.tex  structpoly__t.tex  structring__t.tex
examples/: bgv.c
include/: fhe.h  fhe_bgv.h  fhe_config.h  fhe_poly.h  fhe_ring.h
python/: README.md  requirements.txt  setup.py
python/fhe/: fhe.pxd  fhe.pyx
python/tests/: test_group_properties.py  test_serde.py
src/: bgv.c  ntt.c  poly.c  ring.c
src/rand/: chacha.h  random.h  sample.h
src/utils/: const_time.h  number_theory.c  number_theory.h
tests/: bgv_test.c  params.h  poly_test.c  serde_test.c
tests/fuzz/: bgv_fuzz.c  poly_fuzz.c  serde_fuzz.c
